# OPAL

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  opal_build.py
cmake/: AddFlagIfSupported.cmake
doc/: Doxyfile
lib/: CMakeLists.txt  DummyLabelEstimator.h  Image.h  ImageDatabase.h  ImageTypes.h  Matrix.h  MaxVoteLabelEstimator.h  MultipointLabelEstimator.h  OPAL.cpp  OPAL.h  OPALSettings.cpp  OPALSettings.h  RGBAPixel.cpp  RGBAPixel.h  SSD.h  SSDObject.h  SegmentationAccuracyEstimator.h  util.cpp  util.h
lib/ImageIO/: AnalyzeHeader.cpp  AnalyzeHeader.h  AnalyzeImageReader.h  AnalyzeWriter.h  CMakeLists.txt  Common.h  ImageIO.cpp  ImageIO.h  ImageReader.cpp  ImageReader.h  ImageWriter.h  PngImageReader.h  PngImageWriter.cpp  PngImageWriter.h  SegmentationColorsConverter.h
lib/json11/: CMakeLists.txt
lib/util/: CMakeLists.txt
lib/util/fs/: Directory.cpp  Directory.h  File.cpp  File.h
lib/util/json/: json.cpp  json.h
lib/util/string/: Split.cpp  Split.h
main/: CMakeLists.txt  main.cpp
scripts/: Common.py  CompareWithLatestBuild.py  RunSegmentationWithAllBase.py  RunSegmentationWithOneImage.py  config.py
test/: .CMakeLists.txt.swp  CMakeLists.txt  Common.cpp  Common.h  DatabaseFiles.txt  ImageDatabaseTests.cpp  MatrixTest.cpp  SSDTests.cpp  UtilTests.cpp
test/Image/: AdditionSubtraction.cpp  Assign.cpp  Constructors.cpp  Misc.cpp  Relation.cpp  StreamIO.cpp
test/ImageIO/: AnalyzeHeaderTest.cpp  AnalyzeImageReaderTest.cpp  PngImageReaderTest.cpp
test/Matrix/: AdditionSubtraction.cpp  Allocation.cpp  Assign.cpp  Common.cpp  Common.h  Constructors.cpp  Misc.cpp  Read.cpp  Relation.cpp  SSD.cpp  Write.cpp
test/OPAL/: Constructor.cpp  Initialization.cpp  MaxVoteLabelEstimatorTest.cpp  SSD.cpp
test/matrix/: 3x4_ones_float.txt  3x4_twos_int.txt
test/test_data/: 01.img  DatabaseFiles.txt  IBSR.json  MixedDatabaseFiles.txt  OneLine.txt
test/test_data/Images/: 02.img  03.img  05.hdr  05.img  06.img  07.img  08.img  09.img  10.img  11.img  12.img  13.img  14.img  15.img  16.img  17.img  18.img
test/test_data/Segmentations/: 01.img  02.img  03.img  05.img  06.img  07.img  08.img  09.img  10.img  11.img  12.img  13.img  14.img  15.img  16.hdr  16.img  17.img  18.img
test/test_data/matrix/: 3x4_ones_float.txt  3x4_real_2x3_ones_int.txt  3x4_real_5x5_ones_float.txt  3x4_twos_float.txt  3x4_twos_int.txt  4x5_twos_int.txt
test/util/: DirectoryTest.cpp  FileTest.cpp  JsonTest.cpp
tools/: FloFileIO.h
tools/flow2color/: CMakeLists.txt  flow2color.cpp  flow2color.h  main.cpp
